# parallel_computing

./: .gitignore
lab1/: CMakeLists.txt  Dockerfile  Makefile  Taskfile.yml  lab1.c  main.c  script.sh
lab1/include/: array.h
lab1/src/: array.c
lab2/: Makefile  lab2  lab2-mp  lab2.c
lab2/include/: array.h
lab2/src/: array.c
lab3/: Dockerfile  Makefile  lab3-no-omp  lab3-omp  lab3.c
lab3/include/: array.h  math_func.h
lab3/src/: array.c  math_func.c
